/*
  ChromaDB API

  This is OpenAPI schema for ChromaDB API.

  The version of the OpenAPI document: 1.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package openapitools;

import public "models/embeddings_inner.proto";
import public "models/metadatas_inner_value.proto";

message GetResult {

  repeated string ids = 104120;

  repeated EmbeddingsInner embeddings = 176380933;

  repeated string documents = 406672057;

  repeated map<string, MetadatasInnerValue> metadatas = 528356573;

}
